Fri Mar  7 14:17:10 2003  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Param_Test/svc.conf.xml: I neglected add the change for
          setting the native wchar codeset id to the xml form of the
          service config. This should address the errors with the wstring
	  data.

Fri Mar  7 10:58:32 2003  Ossama Othman  <ossama@uci.edu>

        * tests/Codec/test.idl (Foo::Bar::C):

          Changed type of this attribute from "long long" to "unsigned
	  long long".  It is better supported/emulated by ACE and TAO on
          platforms that lack 64 bit integer support (e.g. VxWorks).

        * tests/Codec/client.cpp:

          Updated to take into account the above change.  The
          "Foo::Bar::C" attribute is now initialized with a value wrapped
          by the ACE_UINT64_LITERAL macro to allow for successful builds
          on platforms that lack 64 bit integer support.  Fixes
          compile-time errors on VxWorks builds.

Fri Mar  7 10:43:57 2003  Ossama Othman  <ossama@uci.edu>

        * tao/DynamicInterface/Request.h:

          Explicitly qualify the TAO_Dynamic_Adapter_Impl friend
          declaration with a global scope qualifier in an attempt to work
          around a problem where some compilers assume that the friend
          declaration refers to a class in the local scope or current
          namespace.

          Moved the CORBA_ORB_RequestSeq class into the CORBA namespace.

        * tao/ORB.h:
        * tao/ObjectIDList.h:
        * tao/ObjectIDList.i:
        * tao/ObjectIDList.cpp:
        * tao/DynamicInterface/Request.cpp:

          Neglected to put the CORBA_ORB_ObjectIdList and
          CORBA_ORB_RequestSeq types into the CORBA namespace, as was
          done with all of the other types in the CORBA namespace.

Fri Mar  7 09:34:06 2003  Phil Mesnier  <mesnier_p@ociweb.com>

        * TAO_IDL/be/be_visitor_operation/operation.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_ss.cpp: The check for